Fix: Pagina 'sobre mi' - Imagen personal. - Se fija footer al fondo de la pagina. - Se quita scrollbar.

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@ body {
     margin: 0;
     padding: 0;
 }
+
+/* For all browsers */
+*::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
